# rag-workshop

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: 1_hardcoded.ipynb  rag_pipeline.ipynb
src/: utils.py
